[gd_scene load_steps=3 format=3 uid="uid://cpfwt8w1avna1"]

[ext_resource type="Script" path="res://scenes/ui/JoinBtn.gd" id="1_8etp1"]

[sub_resource type="LabelSettings" id="LabelSettings_6a5qc"]
font_size = 66

[node name="CharacterSelection" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="CharacterArea" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(1280, 0)
layout_mode = 2
metadata/_edit_use_anchors_ = true

[node name="Header" type="Label" parent="CharacterArea"]
custom_minimum_size = Vector2(0, 96)
layout_mode = 2
text = "Pick your character!"
label_settings = SubResource("LabelSettings_6a5qc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="CharacterArea"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="ScrollContainer" type="ScrollContainer" parent="CharacterArea/MarginContainer"]
custom_minimum_size = Vector2(0, 800)
layout_mode = 2
horizontal_scroll_mode = 0

[node name="GridContainer" type="GridContainer" parent="CharacterArea/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 16
columns = 8

[node name="CenterContainer" type="CenterContainer" parent="CharacterArea"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CharacterArea/CenterContainer"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2

[node name="NicknameInput" type="LineEdit" parent="CharacterArea/CenterContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Nickname..."
alignment = 1

[node name="IpInput" type="LineEdit" parent="CharacterArea/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="JoinBtn" type="Button" parent="CharacterArea/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Join game"
script = ExtResource("1_8etp1")

[connection signal="pressed" from="CharacterArea/CenterContainer/VBoxContainer/JoinBtn" to="CharacterArea/CenterContainer/VBoxContainer/JoinBtn" method="_on_pressed"]
